# project_template_text_classifier

./: .pre-commit-config.yaml  dockerfile  pyproject.toml  readme.md
configs/: model_config_dl_default.yml  model_config_log_reg_default.yml  model_config_naive_bayes_default.yml  model_config_random_forest_default.yml  model_config_svm_default.yml  pipeline_config.yml  pipeline_config_log_reg.yml  pipeline_config_lstm.yml  pipeline_config_naive_bayes.yml  pipeline_config_random_forest.yml  pipeline_config_svm.yml
test/unit/: test_preprocessing.py
text_classifier/: training_pipeline.py
text_classifier/api/: main.py
text_classifier/machine_learning/: constants.py  data_analysis.py  evaluation.py  preprocessing.py  training.py  utils.py
